# Riru-QQSimplify

./: .gitignore  README.md  build.gradle.kts  settings.gradle  settings.gradle.kts
hideapi/: build.gradle.kts
hideapi/src/main/: AndroidManifest.xml
module/: build.gradle  build.gradle.kts  proguard-rules.pro
module/src/main/: AndroidManifest.xml
module/src/main/cpp/: CMakeLists.txt  inject.c  inject.h  log.h  main.c
module/src/main/cpp/libriru_utils/: CMakeLists.txt
module/src/main/cpp/libriru_utils/libriru/: CMakeLists.txt
module/src/main/java/com/github/kr328/qq/blocker/: Constants.java  Injector.java  LayoutBlocker.java  LayoutInflaterProxy.java  UiUtils.java
module/src/main/java/com/github/kr328/qq/blocker/proxy/: IBinderProxy.java  LocalInterfaceProxy.java  OriginalExporter.java  ProxyBinder.java  ProxyBinderFactory.java  ServiceManagerProxy.java  StackUtils.java  TransactCodeExporter.java
module/src/main/java/com/github/kr328/qq/simplify/: Constants.java  Injector.java  LayoutBlocker.java  LayoutInflaterProxy.java  UiUtils.java
module/src/main/java/com/github/kr328/qq/simplify/proxy/: IBinderProxy.java  LocalInterfaceProxy.java  OriginalExporter.java  ProxyBinder.java  ProxyBinderFactory.java  ServiceManagerProxy.java  StackUtils.java  TransactCodeExporter.java
module/src/main/raw/: customize.sh
module/src/main/raw/magisk/: install.sh  module.prop  uninstall.sh
